<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="save_success">링크 저장 완료!</string>
    <string name="close_window">창 닫기</string>
    <string name="select_folder">폴더 선택</string>
    <string name="add_folder">폴더 추가</string>
    <string name="save_success_for_selected_folder">선택한 폴더에 저장 완료!</string>
    <string name="move_to_app">앱에서 보기</string>
    <string name="input_comment">코멘트 남기기</string>
    <string name="move_back">뒤로 가기</string>
    <string name="complete">완료</string>
    <string name="save_folder">폴더에 저장하기</string>
    <string name="invisible_folder">비공개 폴더</string>
    <string name="new_folder_name">새로운 폴더 이름</string>
    <string name="new_folder_title">새로운 폴더</string>
    <string name="memo_about_link">저장한 링크에 대해 간단하게 메모해보세요</string>
    <string name="comment_subtitle">링크 코멘트</string>
    <string name="preference_new_links">new_links</string>
    <string name="preference_new_folders">new_folders</string>
    <string name="empty_folder_text">폴더추가</string>
    <string name="errorText">이미 사용하고 있는 폴더명이예요. 새로운 폴더명을 입력해주세요</string>
    <string name="notice_title">링크풀은 건전한 링크 관리 및 공유 문화를 지향해요</string>
    <string name="notice_description">부적절하거나 불쾌감을 주는 공개 컨텐츠는 제재를 받을 수 있어요. 링크풀과 함께 유익하고 건전한 공유 문화를 만들어가 주세요.</string>
</resources>