<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans_grey800">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/body_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/share_white_round_back">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="0dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="코멘트 작성"
            android:textColor="@color/grey900"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_window"
            android:paddingStart="28dp"
            android:paddingTop="24dp"
            android:paddingEnd="20dp"
            android:src="@drawable/btn_x_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/link_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_subtitle"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/grey800"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent" />
        
        <EditText
            android:id="@+id/comment_text_field"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="14dp"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            android:hint="@string/memo_about_link"
            android:textSize="14sp"
            android:letterSpacing="-0.03"
            android:textColor="@color/grey700"
            android:textColorHint="@color/grey400"
            android:paddingVertical="15dp"
            android:paddingHorizontal="16dp"
            android:minLines="2"
            android:gravity="top"
            android:maxLength="500"
            android:background="@drawable/comment_background"
            app:layout_constraintTop_toBottomOf="@id/link_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/save_comment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/save_button"
            android:enabled="false"
            android:fontFamily="@font/pretendard_bold"
            android:paddingHorizontal="36dp"
            android:paddingVertical="18dp"
            android:text="작성완료"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/comment_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>